# NativeTechResearch

./: CMakeLists.txt
Basics/: CMakeLists.txt  LazyEvaluation.cc  ObjectLifetimeTests.cc  Quine.cc  RefCounter.cc
Basics/STL/: MapTest.cc
CodeWars/: BitsCount.c  CMakeLists.txt  FindEvenIndex.c  Membership.c  StringEnds.c  StringSort.c
Compiler/: CMakeLists.txt  DeadCodeTest.c  FunctionCall.c  README.md  UTF8CharLiteral.cc  UTF8CharLiteralSegregatedFile.cmake
ConstexprTest/: CPPConstexprTest.cpp
CxxTemplates/: AckermannTemplated.cc  CMakeLists.txt  CharAndCompileTime.cc  MetaList.cc  SFINAEBeginning.cc  TemplateFactorial.cc
IDETests/: CMakeLists.txt  CPPConstexprTest.cpp  README.md
JobAssignments/: CMakeLists.txt
JobAssignments/DrWeb/: CMakeLists.txt
JobAssignments/DrWeb/include/: DrWebDictionary.hh  DrWebDictionarySecondImpl.hh
JobAssignments/DrWeb/tests/: DrWebDictionaryFirstImplAndTester.cc  DrWebDictionarySecondImplTester.cc  TrimSpaces.c
cmake/: CMakeBuildSystemHacks.cmake  MakeTargetCompilationStrict.cmake
